# PhysicsInspiredLaplacian

./: README.md
2d-matlab/: harmonicOsc2D.m  locationVarying.m
dataset/: label_test.csv  label_train.csv  list_test.txt  list_train.txt  test.npy  train.npy
dataset/mol2-3D/: test_0.mol2  train_0.mol2
feature-gen/: CMakeLists.txt
feature-gen/dataset/xyz-folder-test/: test_0.npy
feature-gen/dataset/xyz-folder-train/: train_0.npy
feature-gen/features/: test_0.txt  train_0.txt
feature-gen/src/: grid_mesh.cpp  grid_mesh.hpp  hamiltonian.cpp  hamiltonian.hpp  main.cpp  main.hpp
model-gen/: Model-GBDT.py
model-gen/results/: prediction-GBDT.txt
preprocessing/: collectfiles.py  convertfiles.py
